fixed contrast color in home page

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
   font-family: Inter, 'Roboto Condensed Variable', sans-serif, Fira Sans;
   margin: 1rem;
   font-weight: 200;
-  color: #848ea1;
+  color: #AAB0BB;
   background-color: #24252A;
   scroll-behavior: smooth;
 }
